성적표 1단계 완성

--- a/hanbit/bin/syntax/.gitignore
+++ b/hanbit/bin/syntax/.gitignore
@@ -8,3 +8,11 @@
 /multi.class
 /operator.class
 /variable.class
+/practice1.class
+/Sum10.class
+/sumif10.class
+/inputsum.class
+/MultiOf5.class
+/maxmin.class
+/MaxMin2.class
+/continueEx.class
